--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Hello world!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GuangZhi's Pages</title>
+</head>
+<body>
+    <p1>Hello world!</p1>
+    <p1>Coming soon</p1>
+</body>
+</html>
+
