Split the lines

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>GuangZhi's Pages</title>
 </head>
 <body>
-    <p1>Hello world!</p1>
-    <p1>Coming soon</p1>
+    <p1>Hello world!<br>
+        Coming soon
+    </p1>
 </body>
 </html>
 
