Add chatgpt starter blog site

--- a/about.html
+++ b/about.html
@@ -3,23 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Blog</title>
+    <title>About</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to My Blog</h1>
+        <h1>About Me</h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
         </nav>
     </header>
     <main>
-        <h2>Recent Posts</h2>
-        <ul>
-            <li><a href="posts/post1.html">Post 1</a></li>
-            <li><a href="posts/post2.html">Post 2</a></li>
-        </ul>
+        <p>Welcome to my blog! I'm a passionate writer and developer.</p>
     </main>
     <footer>
         <p>&copy; 2024 My Blog</p>
