Fix default strings

--- a/about.html
+++ b/about.html
@@ -15,10 +15,10 @@
         </nav>
     </header>
     <main>
-        <p>Welcome to my blog! I'm a passionate writer and developer.</p>
+        <p>I'm GuangZhi Xiao. I like to solve problems.</p>
     </main>
     <footer>
-        <p>&copy; 2024 My Blog</p>
+        <p>&copy; 2024 GuangZhi Xiao</p>
     </footer>
 </body>
 </html>
