--- a/index.html
+++ b/index.html
@@ -8,21 +8,20 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Blog</h1>
+        <h1>Welcome to another programmer blog.</h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
         </nav>
     </header>
     <main>
-        <h2>Recent Posts</h2>
+        <h2>Posts</h2>
         <ul>
-            <li><a href="posts/post1.html">Post 1</a></li>
-            <li><a href="posts/post2.html">Post 2</a></li>
+            <li><a href="posts/2024-08-30.html">2024 Aug 30 - First post!</a></li>
         </ul>
     </main>
     <footer>
-        <p>&copy; 2024 My Blog</p>
+        <p>&copy; 2024 GuangZhi Xiao</p>
     </footer>
 </body>
 </html>
