Polish up about page

--- a/about.html
+++ b/about.html
@@ -15,7 +15,11 @@
         </nav>
     </header>
     <main>
-        <p>I'm GuangZhi Xiao. I like to solve problems.</p>
+        <p>I'm GuangZhi Xiao and I like to solve problems. I am a professional developer with experience in desktop and backend.<br></p>
+        <ul>
+            <li><a href="https://www.linkedin.com/in/xiaogz">My LinkedIn</a></li>
+            <li><a href="https://github.com/xiaogz">My GitHub</a></li>
+        </ul>
     </main>
     <footer>
         <p>&copy; 2024 GuangZhi Xiao</p>
