Update About page

--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
     </header>
     <main>
         <p>I'm GuangZhi Xiao and I like to solve problems. I am a professional developer with experience in desktop and backend.<br></p>
+        <p>This blog is mainly to record the interesting solutions and tools I come across in my work which I believe to be useful for others facing similar problems or having similar interests.<br></p>
         <ul>
             <li><a href="https://www.linkedin.com/in/xiaogz">My LinkedIn</a></li>
             <li><a href="https://github.com/xiaogz">My GitHub</a></li>
